app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: app-stack
spec:
  selector:
    app: app
  ports:
  - port: 80
    targetPort: 5678
